start some simple editing tools

--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="styles/bootstrap.css"/>
-    <link rel="stylesheet" href="styles/travelbook.css"/>
+    <link rel="stylesheet" href="/styles/bootstrap.css"/>
+    <link rel="stylesheet" href="/styles/travelbook.css"/>
 
   </head>
   <body>
     <div id='app-container'></div>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
